--- a/My/projects.json
+++ b/My/projects.json
@@ -1,35 +1,102 @@
 [
     {
-        "title": "Smart Village System",
-        "description": "Sistem manajemen data desa modern yang terintegrasi. Menggantikan administrasi manual dengan dashboard real-time yang efisien dan transparan.",
+        "title": "Theme-Me CLI",
+        "description": "A terminal personalization suite designed for the Termux environment. Automates the configuration of 60+ visual assets (themes, fonts, schemes) through an interactive CLI or argument-based commands.",
         "techStack": [
-            "Laravel",
-            "TailwindCSS",
-            "MySQL"
-        ],
-        "decision": "Dipilih karena stabilitas ekosistem enterprise Laravel dan kecepatan prototyping Tailwind. Mengutamakan delivery fitur yang cepat tanpa mengorbankan struktur.",
-        "link": "#"
-    },
-    {
-        "title": "Lab Inventory Tracker",
-        "description": "Aplikasi pelacakan aset laboratorium berbasis Python. Menangani peminjaman alat dengan logika First-In-First-Out dan pelaporan otomatis.",
-        "techStack": [
-            "Django",
-            "PostgreSQL",
-            "Bootstrap"
-        ],
-        "decision": "Memanfaatkan 'batteries-included' Django untuk menangani autentikasi kompleks dan CRUD relational data dengan kode yang minimal.",
-        "link": "#"
-    },
-    {
-        "title": "Indie Game Prototype",
-        "description": "Eksperimen pengembangan game 2D sederhana. Fokus pada mekanik fisika dasar dan interaksi pemain yang fluid.",
-        "techStack": [
-            "C++",
             "Python",
-            "Physics Engine"
+            "Bash Scripting",
+            "Shell"
         ],
-        "decision": "Hybrid architecture: High-performance C++ untuk core loop, dan Python untuk fleksibilitas scripting logic level design.",
+        "decision": "Built to improve mobile development ergonomics. Solves the friction of manual environment configuration by providing a 'batteries-included' tool with offline support and auto-restoration capabilities.",
+        "link": "https://github.com/zidan-idz/Theme-Me"
+    },
+    {
+        "title": "ArPy Obfuscator",
+        "description": "A comprehensive Python code protection utility offering 10+ encryption algorithms. Transforms readable source code into obfuscated structures using Marshal bytecode, Bitwise arithmetic, and Zlib compression.",
+        "techStack": [
+            "Python",
+            "Bytecode Manipulation",
+            "Cryptography"
+        ],
+        "decision": "Engineered to safeguard intellectual property against reverse-engineering. Features an intelligent 'auto-decryption' mechanism that analyzes file signatures to reverse the obfuscation process automatically.",
+        "link": "https://github.com/zidan-idz/ArPy"
+    },
+    {
+        "title": "SPPK-PA Expert System",
+        "description": "A web-based clinical decision support system designed for school counselors. Utilizes the Forward Chaining inference engine to automate the preliminary psychological screening of students.",
+        "techStack": [
+            "Django (Python)",
+            "TailwindCSS",
+            "Forward Chaining Algo"
+        ],
+        "decision": "Leveraged Django's secure backend to handle sensitive student records and dynamic rule-based logic. The interface is optimized with TailwindCSS for mobile accessibility during on-site counseling sessions.",
+        "link": "https://github.com/zidan-idz/SPPK-PA"
+    },
+    {
+        "title": "Project-December",
+        "description": "A seasonal anonymous social platform featuring a temporal access lock. Users' thoughts are visualized as an interactive snowfall particle system, where every snowflake represents a unique user entry.",
+        "techStack": [
+            "Node.js (Express)",
+            "CSS Animations",
+            "Temporal Logic"
+        ],
+        "decision": "Designed as an experiment in 'Ephemeral Web'. Challenges standard social media persistence by enforcing a 1-month-only active window (December), utilizing CSS-heavy animations for immersive storytelling.",
+        "link": "https://github.com/zidan-idz/Project-December"
+    },
+    {
+        "title": "RandomWeeks",
+        "description": "A minimalist digital garden and essay repository built with Jekyll Static Site Generator (SSG). Curates diverse thoughts on technology, audiophile gear, and pop culture through a high-performance JAMstack architecture.",
+        "techStack": [
+            "Jekyll (Ruby)",
+            "Liquid Templating",
+            "SCSS / Markdown"
+        ],
+        "decision": "Adopted a 'Docs-as-Code' workflow where content is version-controlled via Git. Eliminates database overhead to prioritize raw read performance, SEO, and long-term digital preservation.",
+        "link": "https://randomweeks.netlify.app/"
+    },
+    {
+        "title": "TES SDM (Viral Quiz Platform)",
+        "description": "A satirical, gamified web assessment tool inspired by Indonesian internet pop culture. Features a randomized question engine (RNG), automated scoring logic, and client-side image generation for social sharing.",
+        "techStack": [
+            "Vanilla JavaScript (ES6+)",
+            "LocalStorage API",
+            "HTML5 Canvas"
+        ],
+        "decision": "Developed as an experiment in 'Viral Engineering' and user engagement. Utilizes LocalStorage for data persistence without backend overhead, ensuring a lightweight and instant interactive experience.",
+        "link": "https://zenzen.fun/"
+    },
+    {
+        "title": "Digital Library Manager",
+        "description": "A native Windows desktop application for library administration. Features a comprehensive CRUD system for book inventory, member management, and automated transaction reporting using the .NET framework.",
+        "techStack": [
+            "C# (.NET)",
+            "Windows Forms",
+            "SQL Database"
+        ],
+        "decision": "Developed to understand the fundamentals of desktop software architecture. Chosen C# for its type-safety and robust integration with Windows OS, focusing on data integrity and administrative workflow efficiency.",
+        "link": "https://github.com/zidan-idz/Digital-Library-App"
+    },
+    {
+        "title": "Chordiz Community (Thesis)",
+        "description": "A gamified guitar chord repository built with Django. Features a 'Quality-First' contribution ecosystem where users earn reputation points and levels through a strict moderation and validation lifecycle.",
+        "techStack": [
+            "Django (Python)",
+            "PostgreSQL",
+            "Alpine.js",
+            "Gamification Logic"
+        ],
+        "decision": "Designed to solve the 'inaccurate chord' problem. Implements a Monolithic MVT architecture with Regex-based client-side transposition and a custom 'Signal-based' reward engine for user retention.",
+        "link": "#"
+    },
+    {
+        "title": "Dino Runner: Evolution",
+        "description": "An enhanced mobile adaptation of the classic endless runner genre. Introduces RPG-lite elements including unique character skills, unlockable skins, and dynamic environmental biomes.",
+        "techStack": [
+            "Godot Engine",
+            "GDScript",
+            "Android SDK"
+        ],
+        "decision": "Selected Godot for its modular Node-based architecture to manage character skills (each skill as a separate scene) and efficient 2D performance optimized for low-end mobile devices.",
         "link": "#"
     }
 ]
